# YOLOv4-LibTorch-CPU-deployment

./: CMakeLists.txt  README.md  main.cpp
